cat-client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cat-client
  labels:
    app: cat-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cat-client
  template:
    metadata:
      labels:
        app: cat-client
    spec:
      serviceAccountName: cat-client
      containers:
        - name: cat-client
          image: aaronyunan/cat-client:17
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
