cat-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cat-client
spec:
  selector:
    app: cat-client
  ports:
    - name: http
      port: 8080
      targetPort: 8080  
  type: ClusterIP
